--- a/package.json
+++ b/package.json
@@ -22,17 +22,25 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "es6-promisify-all": "^0.1.0",
+    "execa": "^0.6.0",
     "inquirer": "^3.0.6",
     "inquirer-autocomplete-prompt": "^0.8.0",
+    "is-number": "^3.0.0",
     "meow": "^3.7.0",
     "mkdirp": "^0.5.1"
   },
   "xo": {
     "space": true,
     "rules": {
-      "import/order": [ 0 ],
-      "unicorn/no-process-exit": [ 0 ],
-      "object-curly-spacing": [ 0 ]
+      "import/order": [
+        0
+      ],
+      "unicorn/no-process-exit": [
+        0
+      ],
+      "object-curly-spacing": [
+        0
+      ]
     }
   }
 }
